[gd_scene load_steps=19 format=2]

[ext_resource path="res://Buttons/LCARSButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUIElements/Rations.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Context_Ultra_Condensed.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GUIElements/RationsGroup.tres" type="ButtonGroup" id=4]

[sub_resource type="StyleBoxFlat" id=12]
content_margin_right = 20.0
bg_color = Color( 0.392157, 0.427451, 0.8, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=13]
content_margin_right = 20.0
bg_color = Color( 0.611765, 0.611765, 1, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=14]
content_margin_right = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=15]
content_margin_right = 20.0
bg_color = Color( 1, 0.611765, 0, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=16]
content_margin_right = 20.0
bg_color = Color( 0.968627, 0.741176, 0.352941, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=17]
content_margin_right = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=18]
content_margin_right = 20.0
bg_color = Color( 0.533333, 0.133333, 0.0666667, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=19]
content_margin_right = 20.0
bg_color = Color( 0.733333, 0.266667, 0.0666667, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=20]
content_margin_right = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20

[sub_resource type="DynamicFont" id=10]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="StyleBoxFlat" id=21]
content_margin_left = 20.0
bg_color = Color( 0.466667, 0.266667, 0.4, 1 )
corner_radius_top_left = 60
corner_radius_bottom_left = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=22]
content_margin_left = 20.0
bg_color = Color( 0.6, 0.466667, 0.666667, 1 )
corner_radius_top_left = 60
corner_radius_bottom_left = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=23]
content_margin_left = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_left = 60
corner_radius_bottom_left = 60
corner_detail = 20

[node name="Rations" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -704.0
margin_bottom = -328.0
rect_min_size = Vector2( 320, 272 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RationContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 320, 272 )
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="RationContainer"]
margin_top = 30.0
margin_right = 335.0
margin_bottom = 242.0
custom_constants/separation = 25

[node name="ButtonHolder" type="VBoxContainer" parent="RationContainer/HBoxContainer"]
margin_right = 130.0
margin_bottom = 212.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowRations" parent="RationContainer/HBoxContainer/ButtonHolder" groups=[
"rationz",
] instance=ExtResource( 1 )]
margin_bottom = 36.0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 13 )
toggle_mode = true
group = ExtResource( 4 )
text = "Meager"
color = 1

[node name="NormalRations" parent="RationContainer/HBoxContainer/ButtonHolder" groups=[
"rationz",
] instance=ExtResource( 1 )]
margin_top = 51.0
margin_bottom = 87.0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 16 )
toggle_mode = true
group = ExtResource( 4 )
text = "Standard"

[node name="HighRations" parent="RationContainer/HBoxContainer/ButtonHolder" groups=[
"rationz",
] instance=ExtResource( 1 )]
margin_top = 102.0
margin_bottom = 138.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 19 )
toggle_mode = true
group = ExtResource( 4 )
text = "Lavish"
color = 3

[node name="CenterContainer" type="VBoxContainer" parent="RationContainer/HBoxContainer"]
margin_left = 155.0
margin_right = 335.0
margin_bottom = 212.0
rect_min_size = Vector2( 180, 212 )

[node name="RationDesc" type="RichTextLabel" parent="RationContainer/HBoxContainer/CenterContainer"]
margin_right = 180.0
margin_bottom = 180.0
rect_min_size = Vector2( 180, 180 )
theme = SubResource( 11 )
text = "Choose a rations level"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -36.0
custom_constants/margin_top = -24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_top = -24.0
margin_right = 320.0
margin_bottom = 36.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" parent="MarginContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 190.0
margin_right = 320.0
margin_bottom = 36.0
size_flags_vertical = 0
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 22 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 23 )
custom_styles/normal = SubResource( 22 )
text = "Close"
align = 0
color = 2
side = 1
[connection signal="pressed" from="RationContainer/HBoxContainer/ButtonHolder/LowRations" to="." method="_on_LowRations_pressed"]
[connection signal="pressed" from="RationContainer/HBoxContainer/ButtonHolder/NormalRations" to="." method="_on_NormalRations_pressed"]
[connection signal="pressed" from="RationContainer/HBoxContainer/ButtonHolder/HighRations" to="." method="_on_HighRations_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
